// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreamingProgressCount should render correctly for 0 items in progress 1`] = `
<DocumentFragment>
  <span
    aria-live="polite"
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    Searching
  </span>
  <small
    class="d-flex align-items-center count countInProgress"
    data-testid="streaming-progress-count"
  >
    <span
      class="position-relative"
    >
      <span
        aria-live="polite"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        0 results in 0.00 seconds
      </span>
    </span>
    <span
      aria-hidden="true"
    >
      0 results in 0.00s
    </span>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for 0 repositories 1`] = `
<DocumentFragment>
  <span
    aria-live="polite"
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    Searching
  </span>
  <small
    class="d-flex align-items-center count countInProgress"
    data-testid="streaming-progress-count"
  >
    <span
      class="position-relative"
    >
      <span
        aria-live="polite"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        0 results in 0.00 seconds
      </span>
    </span>
    <span
      aria-hidden="true"
    >
      0 results in 0.00s
    </span>
    <svg
      aria-label="From 0 repositories"
      class="mdi-icon iconInline ml-1"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for 1 item complete 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count"
    data-testid="streaming-progress-count"
  >
    <span
      class="position-relative"
    >
      <span
        aria-live="polite"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        1 result in 1.25 seconds
      </span>
    </span>
    <span
      aria-hidden="true"
    >
      1 result in 1.25s
    </span>
    <svg
      aria-label="From 1 repository"
      class="mdi-icon iconInline ml-1"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for 123 items complete 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count"
    data-testid="streaming-progress-count"
  >
    <span
      class="position-relative"
    >
      <span
        aria-live="polite"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        123 results in 1.25 seconds
      </span>
    </span>
    <span
      aria-hidden="true"
    >
      123 results in 1.25s
    </span>
    <svg
      aria-label="From 500 repositories"
      class="mdi-icon iconInline ml-1"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for big numbers complete 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count"
    data-testid="streaming-progress-count"
  >
    <span
      class="position-relative"
    >
      <span
        aria-live="polite"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        1.2m results in 52.50 seconds
      </span>
    </span>
    <span
      aria-hidden="true"
    >
      1.2m results in 52.50s
    </span>
    <svg
      aria-label="From 8.9k repositories"
      class="mdi-icon iconInline ml-1"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for limithit 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count"
    data-testid="streaming-progress-count"
  >
    <span
      class="position-relative"
    >
      <span
        aria-live="polite"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      >
        123+ results in 1.25 seconds
      </span>
    </span>
    <span
      aria-hidden="true"
    >
      123+ results in 1.25s
    </span>
    <svg
      aria-label="From 500 repositories"
      class="mdi-icon iconInline ml-1"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;
